--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "isweburl": "^0.2.0",
     "morgan": "^1.9.1",
     "uuid": "^3.3.2",
+    "valid-url": "^1.0.9",
     "winston": "^3.2.1"
   },
   "devDependencies": {
