--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "morgan": "^1.9.1",
     "pg": "^7.8.0",
     "postgrator-cli": "^3.1.0",
-    "uuid": "^3.3.2",
     "valid-url": "^1.0.9",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
